# duneanaobj

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  SRBeamBranch_8h.html  SRBeamBranch_8h_source.html  SRCVNScoreBranch_8h.html  SRCVNScoreBranch_8h_source.html  SRCommonRecoBranch_8h.html  SRCommonRecoBranch_8h_source.html  SRDetectorMetaBranch_8h_source.html  SRDirectionBranch_8h.html  SRDirectionBranch_8h_source.html  SREnums_8h_source.html  SRFDBranch_8h.html  SRFDBranch_8h_source.html  SRFD_8h_source.html  SRGArECAL_8h_source.html  SRGArTrack_8h_source.html  SRGAr_8h_source.html  SRGlobal_8h_source.html  SRInteractionBranch_8h_source.html  SRInteraction_8h.html  SRInteraction_8h_source.html  SRLorentzVector_8h_source.html  SRMINERvA_8h_source.html  SRMeta_8h.html  SRMeta_8h_source.html  SRNDAssnBranch_8h_source.html  SRNDBranch_8h_source.html  SRNDLAr_8h_source.html  SRNDShowerAssn_8h_source.html  SRNDTrackAssn_8h_source.html  SRNeutrinoEnergyBranch_8h.html  SRNeutrinoEnergyBranch_8h_source.html  SRNeutrinoHypothesisBranch_8h_source.html  SRRecoParticle_8h.html  SRRecoParticle_8h_source.html  SRRecoParticlesBranch_8h_source.html  (+177 more)
app/: CMakeLists.txt  duneanaobj_dumpevent.cxx
cmake/Templates/: duneanaobjConfig.cmake.in  setup.duneanaobj.sh.in
duneanaobj/StandardRecord/: CMakeLists.txt  Navigate.cxx  Navigate.h  Navigate.ixx  SRBeamBranch.h  SRCVNScoreBranch.h  SRDirectionBranch.h  SRECALCluster.h  SREnums.h  SRFD.cxx  SRFD.h  SRInteraction.cxx  SRInteraction.h  SRInteractionBranch.h  SRLorentzVector.h  SRMINERvA.h  SRMeta.h  SRNDLAr.cxx  SRNDLAr.h  SRNDShowerAssn.h  SRNDTrackAssn.h  SRNeutrinoEnergyBranch.h  SROpticalFlash.h  SRPFP.h  SRRecoParticle.h  SRRecoParticlesBranch.h  SRSAND.h  SRShower.h  SRTrack.h  SRTrueInteraction.h  SRTrueParticle.h  SRTruthBranch.h  StandardRecord.cxx.in  StandardRecord.h  classes_def.xml
duneanaobj/StandardRecord/Flat/: CMakeLists.txt
duneanaobj/StandardRecord/Proxy/: CMakeLists.txt  Epilog.h  EpilogFwd.h  Instantiations.cxx
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+24 more)
test/: CMakeLists.txt  duneanaobj_dummyevent.cxx
ups/: product_deps
